# block-parser

./: .clang-format  .gitignore  .gitmodules  README.md  format-code.sh  meson.build
cl/: scratch.lisp
include/: block.hpp  crypt.tgz  datfile.hpp  exception.hpp  header.hpp  redis.hpp  snapshot.hpp  transaction.hpp  tx_in.hpp  tx_out.hpp  types.hpp  util.hpp  znn_constants.hpp
python/: list-of-balances-at-block.py
redis-scripts/: getBalanceAtHeight.lua  getblocks.lua  gettxinputs.lua  gettxsconsumingpk.lua
src/: block.cpp  header.cpp  main.cpp  transaction.cpp  tx_in.cpp  tx_out.cpp
zenon/: allocators.cpp  allocators.h  amount.h  base58.h  hash.h  serialize.h  streams.h  uint256.cpp  uint256.h  utilstrencodings.cpp  utilstrencodings.h  version.h
zenon/crypto/: hmac_sha256.h  rfc6979_hmac_sha256.cpp  ripemd160.cpp  scrypt.cpp  sha1.cpp  sha512.cpp
zenon/libzerocoin/: Denominations.cpp  SpendType.h  bignum.h
